Fixed the book image overflow

--- a/index.css
+++ b/index.css
@@ -142,11 +142,10 @@ section.hidden {
     width: 100%;
     position: absolute;
     top: 15%;
-    left: 10%;
 }
 
 .leni-book-3d {
-    width: 320px;
+    width: 380px;
 }
 
 .book {
